fix(toast): icon alignment fix and custom html content example added to readme

--- a/packages/crayons-core/src/components/toast-message/toast-message.scss
+++ b/packages/crayons-core/src/components/toast-message/toast-message.scss
@@ -65,17 +65,21 @@
   }
 
   .icon {
-    margin-inline-start: 16px;
-    margin-block-end: 0px;
-    margin-inline-end: 16px;
-    margin-block-start: 5px;
+    display: flex;
+    height: 20px;
+    align-items: center;
+    box-sizing: border-box;
+    margin-inline: 16px;
+    margin-block: 0;
   }
 
   .remove {
-    margin-inline-start: 12px;
-    margin-block-end: 0px;
-    margin-inline-end: 12px;
-    margin-block-start: 5px;
+    display: flex;
+    height: 20px;
+    align-items: center;
+    box-sizing: border-box;
+    margin-inline: 12px;
+    margin-block: 0;
   }
 }
 
